[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Resources/Fonts/playmegames_64.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/Resources/keys.png" type="Texture" id=2]
[ext_resource path="res://assets/Resources/spacebar.png" type="Texture" id=3]
[ext_resource path="res://assets/Resources/Fonts/playmegames_36.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/Resources/output-onlinepngtools (3).png" type="Texture" id=5]
[ext_resource path="res://assets/Resources/Fonts/playmegames_48.tres" type="DynamicFont" id=6]
[ext_resource path="res://src/Scenes/Levels/instructions.gd" type="Script" id=7]
[ext_resource path="res://assets/audio/Menu Select.wav" type="AudioStream" id=8]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 60.0
margin_right = -60.0
margin_bottom = -60.0
size_flags_vertical = 3
custom_constants/separation = 48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Instructions"]
margin_right = 904.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "instrucoes"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Instructions"]
margin_top = 113.0
margin_right = 904.0
margin_bottom = 392.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="MoveKeys" type="HBoxContainer" parent="Instructions/VBoxContainer"]
margin_right = 904.0
margin_bottom = 131.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Instructions/VBoxContainer/MoveKeys"]
margin_right = 450.0
margin_bottom = 131.0
size_flags_horizontal = 3
custom_constants/separation = 44

[node name="TextureRect" type="TextureRect" parent="Instructions/VBoxContainer/MoveKeys/HBoxContainer"]
margin_right = 203.0
margin_bottom = 131.0
size_flags_horizontal = 3
texture = ExtResource( 2 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Instructions/VBoxContainer/MoveKeys/HBoxContainer"]
margin_left = 247.0
margin_right = 450.0
margin_bottom = 131.0
size_flags_horizontal = 3
texture = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Instructions/VBoxContainer/MoveKeys"]
margin_left = 454.0
margin_right = 904.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Andar"
align = 1
valign = 1

[node name="GrabKeys" type="HBoxContainer" parent="Instructions/VBoxContainer"]
margin_top = 147.0
margin_right = 904.0
margin_bottom = 279.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Instructions/VBoxContainer/GrabKeys"]
margin_right = 450.0
margin_bottom = 132.0
size_flags_horizontal = 3
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Instructions/VBoxContainer/GrabKeys"]
margin_left = 454.0
margin_right = 904.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "segurar
ou soltar"
align = 1
valign = 1

[node name="Button" type="Button" parent="Instructions"]
margin_top = 440.0
margin_right = 904.0
margin_bottom = 480.0
rect_min_size = Vector2( 180, 40 )
flat = true

[node name="Label" type="Label" parent="Instructions/Button"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0.694118, 1, 1 )
custom_constants/shadow_offset_y = 5
text = "voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuSelect" type="AudioStreamPlayer" parent="Instructions"]
stream = ExtResource( 8 )
[connection signal="button_down" from="Instructions/Button" to="." method="_on_Button_button_down"]
[connection signal="gui_input" from="Instructions/Button" to="." method="_on_Button_gui_input"]
[connection signal="pressed" from="Instructions/Button" to="." method="_on_Button_pressed"]
[connection signal="ready" from="Instructions/Button" to="." method="_on_Button_ready"]
